# arf-android-companion

./: .gitignore  README.md  local.properties  settings.gradle.kts
.github/workflows/: build.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  keeloq_bruteforce.c  tea_bruteforce.c
app/src/main/java/com/flipper/psadecrypt/: AboutFragment.kt  App.kt  BleKeepAliveService.kt  BruteForceExecutor.kt  DialogBlur.kt  FlipperBleClient.kt  KeeloqBfExecutor.kt  KeeloqBleProtocol.kt  KeeloqBruteForce.kt  KeeloqDecryptFragment.kt  MainActivity.kt  PsaBleProtocol.kt  PsaDecryptFragment.kt  TeaBruteForce.kt
app/src/main/java/com/flipper/psadecrypt/filemanager/: FileListAdapter.kt  FileManagerFragment.kt
app/src/main/java/com/flipper/psadecrypt/remotecontrol/: FlipperScreenApi.kt  RemoteControlFragment.kt  ScreenDecoder.kt
app/src/main/res/drawable/: ic_nav_about.xml  ic_nav_decrypt.xml  ic_nav_files.xml  ic_nav_keeloq.xml  ic_nav_remote.xml  ic_nav_subghz.xml  ic_nav_theme.xml
app/src/main/res/layout/: activity_main.xml  dialog_preset_editor.xml  fragment_about.xml  fragment_file_manager.xml  fragment_keeloq_decrypt.xml  fragment_psa_decrypt.xml  fragment_remote_control.xml  fragment_subghz_settings.xml  item_file_entry.xml  item_register_pair.xml  item_subghz_add_button.xml  item_subghz_frequency.xml  item_subghz_preset.xml  item_subghz_section_header.xml  item_subghz_toggle.xml  nav_header.xml
app/src/main/res/menu/: nav_drawer.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
(+8 files in other folders)
